fix width on mobile

--- a/src/components/AverageSocialVolume/index.module.scss
+++ b/src/components/AverageSocialVolume/index.module.scss
@@ -69,6 +69,8 @@
 }
 
 .trigger {
+  width: auto;
+
   &:hover {
     color: var(--rhino);
     border-color: var(--jungle-green);
